--- a/layout/default/quickview.html
+++ b/layout/default/quickview.html
@@ -52,8 +52,10 @@
         </addtocart>
       </div>
     </div>
-    <div class="quickview-body">
-      <print content="notes">
+    <div class="quickview-body mt-3 border-top">
+      <div class="quickview-body-content mt-3 p-1">
+        <print content="notes">
+      </div>
     </div>
   </div>
   <footer class="col-12 quickview-footer p-2 py-0 my-0">
@@ -67,7 +69,7 @@
         <a href="http://pinterest.com/pin/create/link/?url=<print URLENCODED_URL>" target="_blank"><i class="i i-social social-pinterest i-4x">social-pinterest</i></a>
         <a href="https://www.linkedin.com/sharing/share-offsite/?url=<print URLENCODED_URL>" target="_blank"><i class="i i-social social-linkedin i-4x">social-linkedin</i></a>
         <a href="https://reddit.com/submit?url=<print URLENCODED_URL>&title=<print content=title>" target="_blank"><i class="i i-social social-reddit i-4x">social-reddit</i></a>
-      </h3>
+      </div>
     </div>
   </footer>
 </div>
