--- a/core/css/stylesheet-vars.css
+++ b/core/css/stylesheet-vars.css
@@ -20,10 +20,10 @@
   --box-shadow-y: 1px;
   --box-shadow-spread: 0;
   --box-shadow-color: rgba(27,31,36,.04);
-  --shadow: 0 3px 6px rgba(140,149,159,0.15);
-  --shadow-sm: 0 1px 0 rgba(27,31,36,0.04);
-  --shadow-md: 0 3px 6px rgba(140,149,159,0.15);
-  --shadow-lg: 0 8px 24px rgba(140,149,159,0.2);
+  --shadow: 0 3px 6px rgba(140,149,159,.15);
+  --shadow-sm: 0 1px 0 rgba(27,31,36,.04);
+  --shadow-md: 0 3px 6px rgba(140,149,159,.15);
+  --shadow-lg: 0 8px 24px rgba(140,149,159,.2);
   --border-radius: .25rem;
   --border-color: #e9e9e9;
   --border-width: 1px;
@@ -415,11 +415,10 @@
   --box-shadow-y: .07rem;
   --box-shadow-spread: .075rem;
   --box-shadow-color: rgba(0, 0, 0, .07);
-  --shadow-color: rgba(0, 0, 0, .15);
-  --shadow-sm-color: rgba(0, 0, 0, .075);
-  --shadow-md-color: rgb(0 0 0 / 10%);
-  --shadow-lg-color: rgba(0, 0, 0, .175);
-  --border-radius: .25rem;
+  --shadow: 0 3px 6px rgba(0, 0, 0, .15);
+  --shadow-sm: 0 1px 0 rgba(0, 0, 0, .04);
+  --shadow-md: 0 3px 6px rgba(0, 0, 0, .15);
+  --shadow-lg: 0 8px 24px rgba(0, 0, 0, .2);
   --border-color: rgba(0,0,0,.15);
   --border-width: 1px;
   --border-style: solid;
